# vuanem-bq-to-pg

./: .gitignore  EC_LOYALTY_POINTS.sql  EC_SMSAutomationVoucher.sql  EC_TOP_SELLING_30DAYS.sql  EC_TOP_SELLING_3DAYS.sql  EC_TOP_SELLING_ALLTIME.sql  EC_VOUCHER.sql  EC__ONHAND_BY_STORE.sql  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
controller/: pipelines.py  tasks.py
libs/: bigquery.py  pg.py  tasks.py
models/: tables.py
test/: test_units.py
